--- a/po/en_CA.po
+++ b/po/en_CA.po
@@ -14,8 +14,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: trader 7.10\n"
 "Report-Msgid-Bugs-To: J.Zaitseff@zap.org.au\n"
-"POT-Creation-Date: 2016-01-05 09:38+1100\n"
-"PO-Revision-Date: 2016-03-11 09:25+1100\n"
+"POT-Creation-Date: 2016-04-16 07:05+1000\n"
+"PO-Revision-Date: 2016-04-16 07:15+1000\n"
 "Last-Translator: John Zaitseff <J.Zaitseff@zap.org.au>\n"
 "Language-Team: English (Canadian)\n"
 "Language: en_CA\n"
@@ -436,10 +436,10 @@ msgstr "No companies on the map"
 #, c-format
 msgctxt "subtitle"
 msgid ""
-"\n"
+" \n"
 "Company"
 msgstr ""
-"\n"
+" \n"
 "Company"
 
 #. TRANSLATORS: "Ownership" is a two-line column label
@@ -1327,7 +1327,7 @@ msgstr ""
 "also changes.  Players may also borrow from the Interstellar Trading Bank to\n"
 "finance additional purchases on the Stock Exchange.\n"
 "\n"
-"The map of the galaxy  is represented  by a ^B~x^N x ^B~y^N grid.  A typical section\n"
+"The map of the galaxy  is represented  by a ^B~x^N × ^B~y^N grid.  A typical section\n"
 "of it may be:\n"
 "\n"
 "        ^e ~. ~. ^s~*^e ~. ~. ~. ^s~*^e ^s~*^e ~. ^N\n"
@@ -1531,19 +1531,18 @@ msgstr "@ Help text, page 10\n"
 msgid "  How to Play  "
 msgstr "  How to Play  "
 
-#. TRANSLATORS: The first %d is the current page number,
-#. the second is the number of pages your help text takes
-#. (6, in English).  You can replace the second %d with a
-#. fixed word, if you like.
-#: src/help.c:286
+#. TRANSLATORS: The parameter %1$d is the current page
+#. number, %2$d is the number of pages your help text
+#. takes (6, in English).
+#: src/help.c:285
 #, c-format
-msgid "Page %d of %d"
-msgstr "Page %d of %d"
+msgid "Page %1$d of %2$d"
+msgstr "Page %1$d of %2$d"
 
 #. TRANSLATORS: The reason the user is not asked "Press any
 #. key to continue" is historical: many, many people used to
 #. ask "where is the <ANY> key?" :-)
-#: src/help.c:487 src/intf.c:3035
+#: src/help.c:486 src/intf.c:3035
 #, c-format
 msgid "[ Press <SPACE> to continue ] "
 msgstr "[ Press <SPACE> to continue ] "
@@ -1555,7 +1554,7 @@ msgstr "[ Press <SPACE> to continue ] "
 #. <CANCEL>, <EXIT>, <CTRL><C>, <CTRL><G> or <CTRL><\>).
 #. Note that the maximum label length is 76 characters,
 #. including the trailing space.
-#: src/help.c:495
+#: src/help.c:494
 #, c-format
 msgid "[ Press <SPACE> to continue or <BACKSPACE> for the previous page ] "
 msgstr "[ Press <SPACE> to continue or <BACKSPACE> for the previous page ] "
