--- a/po/eo.po
+++ b/po/eo.po
@@ -15,8 +15,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: trader 7.10\n"
 "Report-Msgid-Bugs-To: J.Zaitseff@zap.org.au\n"
-"POT-Creation-Date: 2016-01-05 09:38+1100\n"
-"PO-Revision-Date: 2016-03-11 09:25+1100\n"
+"POT-Creation-Date: 2016-04-16 07:05+1000\n"
+"PO-Revision-Date: 2016-04-16 07:17+1000\n"
 "Last-Translator: Felipe Castro <fefcas@gmail.com>\n"
 "Language-Team: Esperanto <translation-team-eo@lists.sourceforge.net>\n"
 "Language: eo\n"
@@ -442,10 +442,10 @@ msgstr "Neniu kompanio sur la mapo"
 #, c-format
 msgctxt "subtitle"
 msgid ""
-"\n"
+" \n"
 "Company"
 msgstr ""
-"\n"
+" \n"
 "Kompanio"
 
 #. TRANSLATORS: "Ownership" is a two-line column label
@@ -1333,7 +1333,7 @@ msgstr ""
 "ankaŭ ŝanĝas.  Ludantoj povas  ankaŭ pruntepreni  el la Interstelara Komerca\n"
 "Banko por financi aldonajn aĉetojn en la akci-interŝanĝejo.\n"
 "\n"
-"La galaksi-mapo estas reprezentata  per krado  ^B~x^N x ^B~y^N.  Ordinara areo de ĝi\n"
+"La galaksi-mapo estas reprezentata  per krado  ^B~x^N × ^B~y^N.  Ordinara areo de ĝi\n"
 "povas esti:\n"
 "\n"
 "        ^e ~. ~. ^s~*^e ~. ~. ~. ^s~*^e ^s~*^e ~. ^N\n"
@@ -1537,19 +1537,18 @@ msgstr "@\n"
 msgid "  How to Play  "
 msgstr "  Kiel ludi  "
 
-#. TRANSLATORS: The first %d is the current page number,
-#. the second is the number of pages your help text takes
-#. (6, in English).  You can replace the second %d with a
-#. fixed word, if you like.
-#: src/help.c:286
+#. TRANSLATORS: The parameter %1$d is the current page
+#. number, %2$d is the number of pages your help text
+#. takes (6, in English).
+#: src/help.c:285
 #, c-format
-msgid "Page %d of %d"
-msgstr "Paĝo %d el %d"
+msgid "Page %1$d of %2$d"
+msgstr "Paĝo %1$d el %2$d"
 
 #. TRANSLATORS: The reason the user is not asked "Press any
 #. key to continue" is historical: many, many people used to
 #. ask "where is the <ANY> key?" :-)
-#: src/help.c:487 src/intf.c:3035
+#: src/help.c:486 src/intf.c:3035
 #, c-format
 msgid "[ Press <SPACE> to continue ] "
 msgstr "[ Premu <SPACOn> por daŭrigi ] "
@@ -1561,7 +1560,7 @@ msgstr "[ Premu <SPACOn> por daŭrigi ] "
 #. <CANCEL>, <EXIT>, <CTRL><C>, <CTRL><G> or <CTRL><\>).
 #. Note that the maximum label length is 76 characters,
 #. including the trailing space.
-#: src/help.c:495
+#: src/help.c:494
 #, c-format
 msgid "[ Press <SPACE> to continue or <BACKSPACE> for the previous page ] "
 msgstr "[ Premu <SPACOn> por daŭrigi aŭ <RETROPAŜOn> por la antaŭa paĝo ] "
