--- a/po/hu.po
+++ b/po/hu.po
@@ -14,8 +14,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: trader 7.10\n"
 "Report-Msgid-Bugs-To: J.Zaitseff@zap.org.au\n"
-"POT-Creation-Date: 2016-01-05 09:38+1100\n"
-"PO-Revision-Date: 2016-03-11 09:25+1100\n"
+"POT-Creation-Date: 2016-04-16 07:05+1000\n"
+"PO-Revision-Date: 2016-04-16 07:19+1000\n"
 "Last-Translator: Balázs Úr <urbalazs@gmail.com>\n"
 "Language-Team: Hungarian <translation-team-hu@lists.sourceforge.net>\n"
 "Language: hu\n"
@@ -438,10 +438,10 @@ msgstr "Nincsenek társaságok a térképen"
 #, c-format
 msgctxt "subtitle"
 msgid ""
-"\n"
+" \n"
 "Company"
 msgstr ""
-"\n"
+" \n"
 "Társaság"
 
 #. TRANSLATORS: "Ownership" is a two-line column label
@@ -1331,7 +1331,7 @@ msgstr ""
 "Banktól  is  kérhetnek  kölcsön  az  Értéktőzsdén  való  további  vásárlások\n"
 "finanszírozásához.\n"
 "\n"
-"A galaxis térképét egy ^B~x^N x ^B~y^N méretű rács ábrázolja.  Egy tipikus szelvénye\n"
+"A galaxis térképét egy ^B~x^N × ^B~y^N méretű rács ábrázolja.  Egy tipikus szelvénye\n"
 "az alábbi lehet:\n"
 "\n"
 "        ^e ~. ~. ^s~*^e ~. ~. ~. ^s~*^e ^s~*^e ~. ^N\n"
@@ -1535,19 +1535,18 @@ msgstr "@ Súgószöveg, 10. oldal\n"
 msgid "  How to Play  "
 msgstr "  A játék menete  "
 
-#. TRANSLATORS: The first %d is the current page number,
-#. the second is the number of pages your help text takes
-#. (6, in English).  You can replace the second %d with a
-#. fixed word, if you like.
-#: src/help.c:286
+#. TRANSLATORS: The parameter %1$d is the current page
+#. number, %2$d is the number of pages your help text
+#. takes (6, in English).
+#: src/help.c:285
 #, c-format
-msgid "Page %d of %d"
-msgstr "%d / %d oldal"
+msgid "Page %1$d of %2$d"
+msgstr "%1$d / %2$d oldal"
 
 #. TRANSLATORS: The reason the user is not asked "Press any
 #. key to continue" is historical: many, many people used to
 #. ask "where is the <ANY> key?" :-)
-#: src/help.c:487 src/intf.c:3035
+#: src/help.c:486 src/intf.c:3035
 #, c-format
 msgid "[ Press <SPACE> to continue ] "
 msgstr "[ Nyomja le a <SZÓKÖZT> a folytatáshoz ] "
@@ -1559,7 +1558,7 @@ msgstr "[ Nyomja le a <SZÓKÖZT> a folytatáshoz ] "
 #. <CANCEL>, <EXIT>, <CTRL><C>, <CTRL><G> or <CTRL><\>).
 #. Note that the maximum label length is 76 characters,
 #. including the trailing space.
-#: src/help.c:495
+#: src/help.c:494
 #, c-format
 msgid "[ Press <SPACE> to continue or <BACKSPACE> for the previous page ] "
 msgstr "[ Nyomja le a <SZÓKÖZT> a folytatáshoz vagy <BACKSPACE>-t az előző oldalhoz] "
