--- a/NEWS
+++ b/NEWS
@@ -18,6 +18,12 @@ at http://www.zap.org.au/services/svn/.
 Version 7.10 (not yet released)
 -------------------------------
 
+Updated translatable strings  to overcome a limitation of  msgfmt(1): if a
+string starts or  ends with a new-line character,  its translation must do
+so as well.  This has an impact on labels in particular.  Also changed the
+help text string  "Page N of M"  to allow  translations of the form  "Of M
+pages, this is page N".  All translations have been updated as a result.
+
 Added a data directory that will contain a desktop file and appropriate
 icons.
 
