--- a/po/nb.po
+++ b/po/nb.po
@@ -14,8 +14,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: trader 7.10\n"
 "Report-Msgid-Bugs-To: J.Zaitseff@zap.org.au\n"
-"POT-Creation-Date: 2016-01-05 09:38+1100\n"
-"PO-Revision-Date: 2016-03-11 09:25+1100\n"
+"POT-Creation-Date: 2016-04-16 07:05+1000\n"
+"PO-Revision-Date: 2016-04-16 07:20+1000\n"
 "Last-Translator: Johnny A. Solbu <johnny@solbu.net>\n"
 "Language-Team: Norwegian Bokmaal <i18n-nb@lister.ping.uio.no>\n"
 "Language: nb\n"
@@ -441,10 +441,10 @@ msgstr "Ingen bedrifter på kartet"
 #, c-format
 msgctxt "subtitle"
 msgid ""
-"\n"
+" \n"
 "Company"
 msgstr ""
-"\n"
+" \n"
 "Firma"
 
 #. TRANSLATORS: "Ownership" is a two-line column label
@@ -1331,7 +1331,7 @@ msgstr ""
 "avkastningen på hver del (i prosent) endres også. Spillere kan også låne fra\n"
 "Interstellar Handelsbank for å finansiere flere kjøp på børsen.\n"
 "\n"
-"Kartet  over galaksen  er representert  ved en  ^B~x^N x ^B~y^N  rutenett. En typisk\n"
+"Kartet  over galaksen  er representert  ved en  ^B~x^N × ^B~y^N  rutenett. En typisk\n"
 "seksjon kan være:\n"
 "\n"
 "        ^e ~. ~. ^s~*^e ~. ~. ~. ^s~*^e ^s~*^e ~. ^N\n"
@@ -1536,19 +1536,18 @@ msgstr "@ Hjelpetekst, side 10\n"
 msgid "  How to Play  "
 msgstr "  Slik spiller man  "
 
-#. TRANSLATORS: The first %d is the current page number,
-#. the second is the number of pages your help text takes
-#. (6, in English).  You can replace the second %d with a
-#. fixed word, if you like.
-#: src/help.c:286
+#. TRANSLATORS: The parameter %1$d is the current page
+#. number, %2$d is the number of pages your help text
+#. takes (6, in English).
+#: src/help.c:285
 #, c-format
-msgid "Page %d of %d"
-msgstr "Side  %d av %d"
+msgid "Page %1$d of %2$d"
+msgstr "Side  %1$d av %2$d"
 
 #. TRANSLATORS: The reason the user is not asked "Press any
 #. key to continue" is historical: many, many people used to
 #. ask "where is the <ANY> key?" :-)
-#: src/help.c:487 src/intf.c:3035
+#: src/help.c:486 src/intf.c:3035
 #, c-format
 msgid "[ Press <SPACE> to continue ] "
 msgstr "[ Trykk <MELLOMROM> for å fortsette ] "
@@ -1560,7 +1559,7 @@ msgstr "[ Trykk <MELLOMROM> for å fortsette ] "
 #. <CANCEL>, <EXIT>, <CTRL><C>, <CTRL><G> or <CTRL><\>).
 #. Note that the maximum label length is 76 characters,
 #. including the trailing space.
-#: src/help.c:495
+#: src/help.c:494
 #, c-format
 msgid "[ Press <SPACE> to continue or <BACKSPACE> for the previous page ] "
 msgstr "[ Trykk <MELLOMROM> for å fortsette eller <BACKSPACE> for forrige side ] "
