--- a/po/sv.po
+++ b/po/sv.po
@@ -14,8 +14,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: trader 7.10\n"
 "Report-Msgid-Bugs-To: J.Zaitseff@zap.org.au\n"
-"POT-Creation-Date: 2016-01-05 09:38+1100\n"
-"PO-Revision-Date: 2016-03-11 09:26+1100\n"
+"POT-Creation-Date: 2016-04-16 07:05+1000\n"
+"PO-Revision-Date: 2016-04-16 07:22+1000\n"
 "Last-Translator: Anders Jonsson <anders.jonsson@norsjovallen.se>\n"
 "Language-Team: Swedish <tp-sv@listor.tp-sv.se>\n"
 "Language: sv\n"
@@ -441,10 +441,10 @@ msgstr "Inga företag på kartan"
 #, c-format
 msgctxt "subtitle"
 msgid ""
-"\n"
+" \n"
 "Company"
 msgstr ""
-"\n"
+" \n"
 "Företag"
 
 #. TRANSLATORS: "Ownership" is a two-line column label
@@ -1336,7 +1336,7 @@ msgstr ""
 "låna från  den  interstellära handelsbanken  för att finansiera  ytterligare\n"
 "inköp på aktiemarknaden.\n"
 "\n"
-"Kartan över galaxen  representeras av ett rutnät  med storleken ^B~x^N x ^B~y^N.  En\n"
+"Kartan över galaxen  representeras av ett rutnät  med storleken ^B~x^N × ^B~y^N.  En\n"
 "typisk del av den kan vara:\n"
 "\n"
 "        ^e ~. ~. ^s~*^e ~. ~. ~. ^s~*^e ^s~*^e ~. ^N\n"
@@ -1539,20 +1539,19 @@ msgstr "@ Hjälptext, sida 10\n"
 msgid "  How to Play  "
 msgstr "  Hur man spelar  "
 
-#. TRANSLATORS: The first %d is the current page number,
-#. the second is the number of pages your help text takes
-#. (6, in English).  You can replace the second %d with a
-#. fixed word, if you like.
-#: src/help.c:286
+#. TRANSLATORS: The parameter %1$d is the current page
+#. number, %2$d is the number of pages your help text
+#. takes (6, in English).
+#: src/help.c:285
 #, c-format
-msgid "Page %d of %d"
-msgstr "Sida %d av %d"
+msgid "Page %1$d of %2$d"
+msgstr "Sida %1$d av %2$d"
 
 # Väljer RETUR för att motverka platsbrist
 #. TRANSLATORS: The reason the user is not asked "Press any
 #. key to continue" is historical: many, many people used to
 #. ask "where is the <ANY> key?" :-)
-#: src/help.c:487 src/intf.c:3035
+#: src/help.c:486 src/intf.c:3035
 #, c-format
 msgid "[ Press <SPACE> to continue ] "
 msgstr "[ Tryck <RETUR> för att fortsätta ] "
@@ -1565,7 +1564,7 @@ msgstr "[ Tryck <RETUR> för att fortsätta ] "
 #. <CANCEL>, <EXIT>, <CTRL><C>, <CTRL><G> or <CTRL><\>).
 #. Note that the maximum label length is 76 characters,
 #. including the trailing space.
-#: src/help.c:495
+#: src/help.c:494
 #, c-format
 msgid "[ Press <SPACE> to continue or <BACKSPACE> for the previous page ] "
 msgstr "[ Tryck <RETUR> för att fortsätta eller <BACKSTEG> för föregående sida ] "
