Add a desktop file that can be locale-enabled

--- a/NEWS
+++ b/NEWS
@@ -18,14 +18,13 @@ at http://www.zap.org.au/services/svn/.
 Version 7.10 (not yet released)
 -------------------------------
 
+Added a data directory that contains a desktop file and appropriate icons.
+
 Updated translatable strings  to overcome a limitation of  msgfmt(1): if a
 string starts or  ends with a new-line character,  its translation must do
 so as well.  This has an impact on labels in particular.  Also changed the
 help text string  "Page N of M"  to allow  translations of the form  "Of M
 pages, this is page N".  All translations have been updated as a result.
-
-Added a data directory that will contain a desktop file and appropriate
-icons.
 
 Added the Serbian translation, with thanks to Мирослав Николић.
 
