--- a/po/da.po
+++ b/po/da.po
@@ -14,8 +14,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: trader 7.10\n"
 "Report-Msgid-Bugs-To: J.Zaitseff@zap.org.au\n"
-"POT-Creation-Date: 2016-04-16 12:31+1000\n"
-"PO-Revision-Date: 2017-05-14 06:24+1000\n"
+"POT-Creation-Date: 2017-05-17 09:45+1000\n"
+"PO-Revision-Date: 2017-05-17 10:01+1000\n"
 "Last-Translator: Joe Hansen <joedalton2@yahoo.dk>\n"
 "Language-Team: Danish <dansk@dansk-gruppen.dk>\n"
 "Language: da\n"
@@ -1686,62 +1686,37 @@ msgstr "xwcrtomb: NUL"
 msgid "xwcrtomb: `%lc'"
 msgstr "xwcrtomb: »%lc«"
 
-#: lib/getopt.c:575 lib/getopt.c:604
+#: lib/getopt.c:278
 #, c-format
-msgid "%s: option '%s' is ambiguous; possibilities:"
-msgstr "%s: tilvalg »%s« er tvetydigt; muligheder:"
+msgid "%s: option '%s%s' is ambiguous\n"
+msgstr "%s: tilvalg »%s%s« er tvetydigt\n"
 
-#: lib/getopt.c:619
+#: lib/getopt.c:284
 #, c-format
-msgid "%s: option '%s' is ambiguous\n"
-msgstr "%s: tilvalg »%s« er tvetydigt\n"
+msgid "%s: option '%s%s' is ambiguous; possibilities:"
+msgstr "%s: tilvalg »%s%s« er tvetydigt; muligheder:"
 
-#: lib/getopt.c:654 lib/getopt.c:658
+#: lib/getopt.c:319
 #, c-format
-msgid "%s: option '--%s' doesn't allow an argument\n"
-msgstr "%s: tilvalg »--%s« tillader ikke et argument\n"
+msgid "%s: unrecognized option '%s%s'\n"
+msgstr "%s: tilvalg blev ikke genkendt »%s%s«\n"
 
-#: lib/getopt.c:667 lib/getopt.c:672
+#: lib/getopt.c:345
 #, c-format
-msgid "%s: option '%c%s' doesn't allow an argument\n"
-msgstr "%s: tilvalg »%c%s« tillader ikke et argument\n"
+msgid "%s: option '%s%s' doesn't allow an argument\n"
+msgstr "%s: tilvalg »%s%s« tillader ikke et argument\n"
 
-#: lib/getopt.c:715 lib/getopt.c:734
+#: lib/getopt.c:360
 #, c-format
-msgid "%s: option '--%s' requires an argument\n"
-msgstr "%s: tilvalg »--%s« kræver et argument\n"
+msgid "%s: option '%s%s' requires an argument\n"
+msgstr "%s: tilvalg »%s%s« kræver et argument\n"
 
-#: lib/getopt.c:772 lib/getopt.c:775
-#, c-format
-msgid "%s: unrecognized option '--%s'\n"
-msgstr "%s: tilvalg blev ikke genkendt »--%s«\n"
-
-#: lib/getopt.c:783 lib/getopt.c:786
-#, c-format
-msgid "%s: unrecognized option '%c%s'\n"
-msgstr "%s: tilvalg blev ikke genkendt »%c%s«\n"
-
-#: lib/getopt.c:835 lib/getopt.c:838
+#: lib/getopt.c:621
 #, c-format
 msgid "%s: invalid option -- '%c'\n"
 msgstr "%s: ugyldigt tilvalg -- »%c«\n"
 
-#: lib/getopt.c:891 lib/getopt.c:908 lib/getopt.c:1118 lib/getopt.c:1136
+#: lib/getopt.c:636 lib/getopt.c:682
 #, c-format
 msgid "%s: option requires an argument -- '%c'\n"
 msgstr "%s: tilvalg kræver et argument -- »%c«\n"
-
-#: lib/getopt.c:964 lib/getopt.c:980
-#, c-format
-msgid "%s: option '-W %s' is ambiguous\n"
-msgstr "%s: tilvalg »W %s« er tvetydigt\n"
-
-#: lib/getopt.c:1004 lib/getopt.c:1022
-#, c-format
-msgid "%s: option '-W %s' doesn't allow an argument\n"
-msgstr "%s: tilvalg »-W %s« tillader ikke et argument\n"
-
-#: lib/getopt.c:1043 lib/getopt.c:1061
-#, c-format
-msgid "%s: option '-W %s' requires an argument\n"
-msgstr "%s: tilvalg »-W %s« kræver et argument\n"
