--- a/po/ru.po
+++ b/po/ru.po
@@ -17,8 +17,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: trader 7.10\n"
 "Report-Msgid-Bugs-To: J.Zaitseff@zap.org.au\n"
-"POT-Creation-Date: 2016-04-16 12:31+1000\n"
-"PO-Revision-Date: 2017-05-14 06:26+1000\n"
+"POT-Creation-Date: 2017-05-17 09:45+1000\n"
+"PO-Revision-Date: 2017-05-17 10:13+1000\n"
 "Last-Translator: Pavel Maryanov <acid@jack.kiev.ua>\n"
 "Language-Team: Russian <gnu@mx.ru>\n"
 "Language: ru\n"
@@ -1688,62 +1688,37 @@ msgstr "xwcrtomb: NUL"
 msgid "xwcrtomb: `%lc'"
 msgstr "xwcrtomb: «%lc»"
 
-#: lib/getopt.c:575 lib/getopt.c:604
+#: lib/getopt.c:278
 #, c-format
-msgid "%s: option '%s' is ambiguous; possibilities:"
-msgstr "%s: неоднозначный ключ «%s»; возможности:"
+msgid "%s: option '%s%s' is ambiguous\n"
+msgstr "%s: неоднозначный ключ «%s%s»\n"
 
-#: lib/getopt.c:619
+#: lib/getopt.c:284
 #, c-format
-msgid "%s: option '%s' is ambiguous\n"
-msgstr "%s: неоднозначный ключ «%s»\n"
+msgid "%s: option '%s%s' is ambiguous; possibilities:"
+msgstr "%s: неоднозначный ключ «%s%s»; возможности:"
 
-#: lib/getopt.c:654 lib/getopt.c:658
+#: lib/getopt.c:319
 #, c-format
-msgid "%s: option '--%s' doesn't allow an argument\n"
-msgstr "%s: ключ «--%s» должен использоваться без аргумента\n"
+msgid "%s: unrecognized option '%s%s'\n"
+msgstr "%s: неизвестный ключ «%s%s»\n"
 
-#: lib/getopt.c:667 lib/getopt.c:672
+#: lib/getopt.c:345
 #, c-format
-msgid "%s: option '%c%s' doesn't allow an argument\n"
-msgstr "%s: ключ «%c%s» должен использоваться без аргумента\n"
+msgid "%s: option '%s%s' doesn't allow an argument\n"
+msgstr "%s: ключ «%s%s» должен использоваться без аргумента\n"
 
-#: lib/getopt.c:715 lib/getopt.c:734
+#: lib/getopt.c:360
 #, c-format
-msgid "%s: option '--%s' requires an argument\n"
-msgstr "%s: ключ «--%s» должен использоваться с аргументом\n"
+msgid "%s: option '%s%s' requires an argument\n"
+msgstr "%s: ключ «%s%s» должен использоваться с аргументом\n"
 
-#: lib/getopt.c:772 lib/getopt.c:775
-#, c-format
-msgid "%s: unrecognized option '--%s'\n"
-msgstr "%s: неизвестный ключ «--%s»\n"
-
-#: lib/getopt.c:783 lib/getopt.c:786
-#, c-format
-msgid "%s: unrecognized option '%c%s'\n"
-msgstr "%s: неизвестный ключ «%c%s»\n"
-
-#: lib/getopt.c:835 lib/getopt.c:838
+#: lib/getopt.c:621
 #, c-format
 msgid "%s: invalid option -- '%c'\n"
 msgstr "%s: неверный ключ «%c»\n"
 
-#: lib/getopt.c:891 lib/getopt.c:908 lib/getopt.c:1118 lib/getopt.c:1136
+#: lib/getopt.c:636 lib/getopt.c:682
 #, c-format
 msgid "%s: option requires an argument -- '%c'\n"
 msgstr "%s: ключ «%c» должен использоваться с аргументом\n"
-
-#: lib/getopt.c:964 lib/getopt.c:980
-#, c-format
-msgid "%s: option '-W %s' is ambiguous\n"
-msgstr "%s: неоднозначный ключ «-W %s»\n"
-
-#: lib/getopt.c:1004 lib/getopt.c:1022
-#, c-format
-msgid "%s: option '-W %s' doesn't allow an argument\n"
-msgstr "%s: ключ «-W %s» должен использоваться без аргумента\n"
-
-#: lib/getopt.c:1043 lib/getopt.c:1061
-#, c-format
-msgid "%s: option '-W %s' requires an argument\n"
-msgstr "%s: ключ «-W %s» должен использоваться с аргументом\n"
